src/current/v26.1/foreign-key.md
---
title: Foreign Key Constraint
summary: The `FOREIGN KEY` constraint specifies a column can contain only values exactly matching existing values from the column it references.
toc: true
docs_area: reference.sql
---

A foreign key is a column (or combination of columns) in a table whose values must match values of a column in some other table. `FOREIGN KEY` constraints enforce [referential integrity](https://wikipedia.org/wiki/Referential_integrity), which essentially says that if column value A refers to column value B, then column value B must exist.

For example, given an `orders` table and a `customers` table, if you create a column `orders.customer_id` that references the `customers.id` primary key:

- Each value inserted or updated in `orders.customer_id` must exactly match a value in `customers.id`, or be `NULL`.
- Values in `customers.id` that are referenced by `orders.customer_id` cannot be deleted or updated, unless you have [cascading actions](#use-a-foreign-key-constraint-with-cascade). However, values of `customers.id` that are _not_ present in `orders.customer_id` can be deleted or updated.

To learn more about the basics of foreign keys, watch the following video:

{% include_cached youtube.html video_id="5kiMg7GXAsY" %}

{{site.data.alerts.callout_success}}
To read more about how foreign keys work, see our [What is a Foreign Key? (With SQL Examples)](https://www.cockroachlabs.com/blog/what-is-a-foreign-key/) blog post.
{{site.data.alerts.end}}

## Details

### Rules for creating foreign keys

**Foreign Key Columns**

- Foreign key columns must use their referenced column's [type]({% link {{ page.version.version }}/data-types.md %}).
- A foreign key column cannot be a virtual [computed column]({% link {{ page.version.version }}/computed-columns.md %}), but it can be a stored computed column.
- A single column can have multiple foreign key constraints. For an example, see [Add multiple foreign key constraints to a single column](#add-multiple-foreign-key-constraints-to-a-single-column).
- A foreign key column can reference the [`crdb_region` column]({% link {{ page.version.version }}/alter-table.md %}#crdb_region) in [`REGIONAL BY ROW`]({% link {{ page.version.version }}/table-localities.md %}#regional-by-row-tables) tables even if the `crdb_region` column is not explicitly part of a `UNIQUE` constraint. This is possible because `crdb_region` is implicitly included in every index on `REGIONAL BY ROW` tables as the partitioning key. This applies to whichever column is used as the partitioning column, in case a different name is used via `REGIONAL BY ROW AS`.
    - If [region inference is enabled]({% link {{ page.version.version }}/alter-table.md %}#infer-a-rows-home-region-from-a-foreign-key) on a `REGIONAL BY ROW` table, the foreign key specified in [`infer_rbr_region_col_using_constraint`]({% link {{ page.version.version }}/with-storage-parameter.md %}#table-parameters) **must** include the `crdb_region` column. CockroachDB uses the foreign key to look up the matching row in the parent and copy its region value, ensuring the child row is placed in the same region as the parent.

    - If [auto-rehoming is enabled]({% link {{ page.version.version }}/alter-table.md %}#turn-on-auto-rehoming-for-regional-by-row-tables) on a `REGIONAL BY ROW` table, a foreign key column **cannot** reference that table's `crdb_region` column. This is because auto-rehoming may move rows across regions and violate locality guarantees for referencing rows.

**Referenced Columns**

- Referenced columns must contain only unique sets of values. This means the `REFERENCES` clause must use exactly the same columns as a [`UNIQUE`]({% link {{ page.version.version }}/unique.md %}) or [`PRIMARY KEY`]({% link {{ page.version.version }}/primary-key.md %}) constraint on the referenced table. For example, the clause `REFERENCES tbl (C, D)` requires `tbl` to have either the constraint `UNIQUE (C, D)` or `PRIMARY KEY (C, D)`.  The order of the columns in the foreign key definition does not need to match the order of the columns in the corresponding `UNIQUE` or `PRIMARY KEY` constraint.
- In the `REFERENCES` clause, if you specify a table but no columns, CockroachDB references the table's primary key. In these cases, the `FOREIGN KEY` constraint and the referenced table's primary key must contain the same number of columns.
-  By default, referenced columns must be in the same database as the referencing foreign key column. To enable cross-database foreign key references, set the `sql.cross_db_fks.enabled` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %}) to `true`.

### Null values

Single-column foreign keys accept null values.

Multiple-column (composite) foreign keys only accept null values in the following scenarios:

- The write contains null values for all foreign key columns (if `MATCH FULL` is specified).
- The write contains null values for at least one foreign key column (if `MATCH SIMPLE` is specified).

For more information about composite foreign keys, see the [composite foreign key matching](#composite-foreign-key-matching) section.

Note that allowing null values in either your foreign key or referenced columns can degrade their referential integrity, since any key with a null value is never checked against the referenced table. To avoid this, you can use a [`NOT NULL` constraint]({% link {{ page.version.version }}/not-null.md %}) on foreign keys when [creating your tables]({% link {{ page.version.version }}/create-table.md %}).

{{site.data.alerts.callout_info}}
A `NOT NULL` constraint cannot be added to existing tables.
{{site.data.alerts.end}}

### Composite foreign key matching

By default, composite foreign keys are matched using the `MATCH SIMPLE` algorithm (which is the same default as PostgreSQL). `MATCH FULL` is available if specified. You can specify both `MATCH FULL` and `MATCH SIMPLE`.

All composite key matches defined prior to version 19.1 use the `MATCH SIMPLE` comparison method. If you had a composite foreign key constraint and have just upgraded to version 19.1, then check that `MATCH SIMPLE` works for your schema and consider replacing that foreign key constraint with a `MATCH FULL` one.

#### How it works

For matching purposes, composite foreign keys can be in one of three states:

- **Valid**: Keys that can be used for matching foreign key relationships.

- **Invalid**: Keys that will not be used for matching (including for any cascading operations).

- **Unacceptable**: Keys that cannot be inserted at all (an error is signalled).

`MATCH SIMPLE` stipulates that:

- **Valid** keys may not contain any null values.

- **Invalid** keys contain one or more null values.

- **Unacceptable** keys do not exist from the point of view of `MATCH SIMPLE`; all composite keys are acceptable.

`MATCH FULL` stipulates that:

- **Valid** keys may not contain any null values.

- **Invalid** keys must have all null values.

- **Unacceptable** keys have any combination of both null and non-null values. In other words, `MATCH FULL` requires that if any column of a composite key is `NULL`, then all columns of the key must be `NULL`.

For examples showing how these key matching algorithms work, see [Match composite foreign keys with `MATCH SIMPLE` and `MATCH FULL`](#match-composite-foreign-keys-with-match-simple-and-match-full).

{{site.data.alerts.callout_info}}
CockroachDB does not support `MATCH PARTIAL`. For more information, see issue [#20305](https://github.com/cockroachdb/cockroach/issues/20305).
{{site.data.alerts.end}}

### Foreign key actions

When you set a foreign key constraint, you can control what happens to the constrained column when the column it's referencing (the foreign key) is deleted or updated.

Parameter | Description
----------|------------
`ON DELETE NO ACTION` | _Default action._ If there are any existing references to the key being deleted, the transaction will fail at the end of the statement. The key can be updated, depending on the `ON UPDATE` action. <br><br>Alias: `ON DELETE RESTRICT`
`ON UPDATE NO ACTION` | _Default action._ If there are any existing references to the key being updated, the transaction will fail at the end of the statement. The key can be deleted, depending on the `ON DELETE` action. <br><br>Alias: `ON UPDATE RESTRICT`
`ON DELETE RESTRICT` / `ON UPDATE RESTRICT` | `RESTRICT` and `NO ACTION` are currently equivalent until options for deferring constraint checking are added. To set an existing foreign key action to `RESTRICT`, the foreign key constraint must be dropped and recreated.
`ON DELETE CASCADE` / `ON UPDATE CASCADE` | When a referenced foreign key is deleted or updated, all rows referencing that key are deleted or updated, respectively. If there are other alterations to the row, such as a `SET NULL` or `SET DEFAULT`, the delete will take precedence. <br><br>Note that `CASCADE` does not list objects it drops or updates, so it should be used cautiously.
`ON DELETE SET NULL` / `ON UPDATE SET NULL` | When a referenced foreign key is deleted or updated, respectively, the columns of all rows referencing that key will be set to `NULL`. The column must allow `NULL` or this update will fail.
`ON DELETE SET DEFAULT` / `ON UPDATE SET DEFAULT` | When a referenced foreign key is deleted or updated, the columns of all rows referencing that key are set to the default value for that column. <br/><br/> If the default value for the column is null, or if no default value is provided and the column does not have a [`NOT NULL`]({% link {{ page.version.version }}/not-null.md %}) constraint, this will have the same effect as `ON DELETE SET NULL` or `ON UPDATE SET NULL`. The default value must still conform with all other constraints, such as `UNIQUE`.

{{site.data.alerts.callout_info}}
 If a foreign key column has multiple constraints that reference the same column, the foreign key action that is specified by the first foreign key takes precedence. For an example, see [Add multiple foreign key constraints to a single column](#add-multiple-foreign-key-constraints-to-a-single-column).
{{site.data.alerts.end}}

### Performance

Because the foreign key constraint requires per-row checks on two tables, statements involving foreign key or referenced columns can take longer to execute.

To improve query performance, we recommend doing the following:

- Create a secondary index on all referencing foreign key columns that are not already indexed.

## Syntax

Foreign key constraints can be defined at the [table level](#table-level). However, if you only want the constraint to apply to a single column, it can be applied at the [column level](#column-level).

{{site.data.alerts.callout_info}}
You can also add the `FOREIGN KEY` constraint to existing tables through [`ADD CONSTRAINT`]({% link {{ page.version.version }}/alter-table.md %}#add-the-foreign-key-constraint-with-cascade).
{{site.data.alerts.end}}

### Column level

<div>{% remote_include https://raw.githubusercontent.com/cockroachdb/generated-diagrams/{{ page.release_info.crdb_branch_name }}/grammar_svg/foreign_key_column_level.html %}</div>

| Parameter | Description |
|-----------|-------------|
| `table_name` | The name of the table you're creating. |
| `column_name` | The name of the foreign key column. |
| `column_type` | The foreign key column's [data type]({% link {{ page.version.version }}/data-types.md %}). |
| `parent_table` | The name of the table the foreign key references. |
| `ref_column_name` | The name of the column the foreign key references. <br/><br/>If you do not include the `ref_column_name` you want to reference from the `parent_table`, CockroachDB uses the first column of `parent_table`'s primary key.
| `column_constraints` | Any other column-level [constraints]({% link {{ page.version.version }}/constraints.md %}) you want to apply to this column. |
| `column_def` | Definitions for any other columns in the table. |
| `table_constraints` | Any table-level [constraints]({% link {{ page.version.version }}/constraints.md %}) you want to apply. |

**Example**

{% include_cached copy-clipboard.html %}
~~~ sql
> CREATE TABLE IF NOT EXISTS orders (
    id INT PRIMARY KEY,
    customer INT NOT NULL REFERENCES customers (id) ON DELETE CASCADE,
    orderTotal DECIMAL(9,2),
    INDEX (customer)
  );
~~~
{{site.data.alerts.callout_danger}}
`CASCADE` does not list objects it drops or updates, so it should be used cautiously.
{{site.data.alerts.end}}

### Table level

<div>{% remote_include https://raw.githubusercontent.com/cockroachdb/generated-diagrams/{{ page.release_info.crdb_branch_name }}/grammar_svg/foreign_key_table_level.html %}</div>

| Parameter | Description |
|-----------|-------------|
| `table_name` | The name of the table you're creating. |
| `column_def` | Definitions for the table's columns. |
| `name` | The name of the constraint. |
| `fk_column_name` | The name of the foreign key column. |
| `parent_table` | The name of the table the foreign key references. |
| `ref_column_name` | The name of the column the foreign key references. <br/><br/>If you do not include the `column_name` you want to reference from the `parent_table`, CockroachDB uses the first column of `parent_table`'s primary key.
| `table_constraints` | Any other table-level [constraints]({% link {{ page.version.version }}/constraints.md %}) you want to apply. |

**Example**

{% include_cached copy-clipboard.html %}
~~~ sql
CREATE TABLE packages (
    customer INT,
    "order" INT,
    id INT,
    address STRING(50),
    delivered BOOL,
    delivery_date DATE,
    PRIMARY KEY (customer, "order", id),
    CONSTRAINT fk_order FOREIGN KEY (customer, "order") REFERENCES orders
    );
~~~

## Usage examples

### Use a foreign key constraint with default actions

In this example, we'll create a table with a foreign key constraint with the default [actions](#foreign-key-actions) (`ON UPDATE NO ACTION ON DELETE NO ACTION`).

1. Create the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers (id INT PRIMARY KEY, email STRING UNIQUE);
    ~~~

1. Create the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE IF NOT EXISTS orders (
        id INT PRIMARY KEY,
        customer INT NOT NULL REFERENCES customers (id),
        orderTotal DECIMAL(9,2),
        INDEX (customer)
      );
    ~~~

1. Insert a record into each table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers VALUES (1001, 'a@co.tld'), (1234, 'info@cockroachlabs.com');
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders VALUES (1, 1002, 29.99);
    ~~~
    ~~~
    pq: foreign key violation: value [1002] not found in customers@primary [id]
    ~~~

    The second record insertion returns an error because the customer `1002` doesn't exist in the referenced table.

1. Insert a record into the referencing table and try to update the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders VALUES (1, 1001, 29.99);
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers SET id = 1002 WHERE id = 1001;
    ~~~
    ~~~
    pq: foreign key violation: value(s) [1001] in columns [id] referenced in table "orders"
    ~~~

    The update to the referenced table returns an error because `id = 1001` is referenced and the default [foreign key action](#foreign-key-actions) is enabled (`ON UPDATE NO ACTION`). However, `id = 1234` is not referenced and can be updated.

1. Update the `id`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers SET id = 1111 WHERE id = 1234;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers;
    ~~~
    ~~~
      id  |         email
    +------+------------------------+
      1001 | a@co.tld
      1111 | info@cockroachlabs.com
    (2 rows)
    ~~~


1. Try to delete a referenced row:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM customers WHERE id = 1001;
    ~~~
    ~~~
    pq: foreign key violation: value(s) [1001] in columns [id] referenced in table "orders"
    ~~~

    Similarly, the deletion returns an error because `id = 1001` is referenced and the default [foreign key action](#foreign-key-actions) is enabled (`ON DELETE NO ACTION`). However, `id = 1111` is not referenced and can be deleted.

1. Delete the row:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM customers WHERE id = 1111;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers;
    ~~~
    ~~~
      id  |  email
    +------+----------+
      1001 | a@co.tld
    (1 row)
    ~~~

### Use a Foreign Key Constraint with `CASCADE`

In this example, we'll create a table with a foreign key constraint with the [foreign key actions](#foreign-key-actions) `ON UPDATE CASCADE` and `ON DELETE CASCADE`.

1. Create the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers_2 (
        id INT PRIMARY KEY
      );
    ~~~

1. Create the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE orders_2 (
        id INT PRIMARY KEY,
        customer_id INT REFERENCES customers_2(id) ON UPDATE CASCADE ON DELETE CASCADE
      );
    ~~~

1. Insert a few records into the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers_2 VALUES (1), (2), (3);
    ~~~

1. Insert some records into the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders_2 VALUES (100,1), (101,2), (102,3), (103,1);
    ~~~

1. Update an `id` in the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers_2 SET id = 23 WHERE id = 1;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers_2;
    ~~~

    ~~~
      id
    +----+
      2
      3
      23
    (3 rows)
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_2;
    ~~~

    ~~~
      id  | customer_id
    +-----+-------------+
      100 |          23
      101 |           2
      102 |           3
      103 |          23
    (4 rows)
    ~~~

    When `id = 1` was updated to `id = 23` in `customers_2`, the update propagated to the referencing table `orders_2`.

    Similarly, a deletion will cascade. 

1. Delete `id = 23` from `customers_2`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM customers_2 WHERE id = 23;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers_2;
    ~~~

    ~~~
      id
    +----+
      2
      3
    (2 rows)
    ~~~

1. Check to make sure the rows in `orders_2` where `customers_id = 23` were also deleted:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_2;
    ~~~

    ~~~
      id  | customer_id
    +-----+-------------+
      101 |           2
      102 |           3
    (2 rows)
    ~~~

### Use a Foreign Key Constraint with `SET NULL`

In this example, we'll create a table with a foreign key constraint with the [foreign key actions](#foreign-key-actions) `ON UPDATE SET NULL` and `ON DELETE SET NULL`.

1. Create the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers_3 (
        id INT PRIMARY KEY
      );
    ~~~

1. Create the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE orders_3 (
        id INT PRIMARY KEY,
        customer_id INT REFERENCES customers_3(id) ON UPDATE SET NULL ON DELETE SET NULL
      );
    ~~~

1. Insert a few records into the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers_3 VALUES (1), (2), (3);
    ~~~

1. Insert some records into the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders_3 VALUES (100,1), (101,2), (102,3), (103,1);
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_3;
    ~~~
    ~~~
      id  | customer_id
    +-----+-------------+
      100 |           1
      101 |           2
      102 |           3
      103 |           1
    (4 rows)
    ~~~

1. Update an `id` in the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers_3 SET id = 23 WHERE id = 1;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers_3;
    ~~~
    ~~~
      id
    +----+
      2
      3
      23
    (3 rows)
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_3;
    ~~~
    ~~~
      id  | customer_id
    +-----+-------------+
      100 |        NULL
      101 |           2
      102 |           3
      103 |        NULL
    (4 rows)
    ~~~

    When `id = 1` was updated to `id = 23` in `customers_3`, the referencing `customer_id` was set to `NULL`.

    Similarly, a deletion will set the referencing `customer_id` to `NULL`. 
    
1. Delete `id = 2` from `customers_3`:

      {% include_cached copy-clipboard.html %}
      ~~~ sql
      > DELETE FROM customers_3 WHERE id = 2;
      ~~~

      {% include_cached copy-clipboard.html %}
      ~~~ sql
      > SELECT * FROM customers_3;
      ~~~
      ~~~
        id
      +----+
        3
        23
      (2 rows)
      ~~~

1. Check to make sure the row in `orders_3` where `customers_id = 2` was updated to `NULL`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_3;
    ~~~
    ~~~
      id  | customer_id
    +-----+-------------+
      100 |        NULL
      101 |        NULL
      102 |           3
      103 |        NULL
    (4 rows)
    ~~~

### Use a Foreign Key Constraint with `SET DEFAULT`

In this example, we'll create a table with a `FOREIGN` constraint with the [foreign key actions](#foreign-key-actions) `ON UPDATE SET DEFAULT` and `ON DELETE SET DEFAULT`.

1. Create the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers_4 (
        id INT PRIMARY KEY
      );
    ~~~

1. Create the referencing table with the `DEFAULT` value for `customer_id` set to `9999`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE orders_4 (
        id INT PRIMARY KEY,
        customer_id INT DEFAULT 9999 REFERENCES customers_4(id) ON UPDATE SET DEFAULT ON DELETE SET DEFAULT
      );
    ~~~

1. Insert a few records into the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers_4 VALUES (1), (2), (3), (9999);
    ~~~

1. Insert some records into the referencing table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders_4 VALUES (100,1), (101,2), (102,3), (103,1);
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_4;
    ~~~

    ~~~
      id  | customer_id
    +-----+-------------+
      100 |           1
      101 |           2
      102 |           3
      103 |           1
    (4 rows)
    ~~~

1. Update an `id` in the referenced table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers_4 SET id = 23 WHERE id = 1;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers_4;
    ~~~

    ~~~
      id
    +------+
        2
        3
        23
      9999
    (4 rows)
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_4;
    ~~~

    ~~~
      id  | customer_id
    +-----+-------------+
      100 |        9999
      101 |           2
      102 |           3
      103 |        9999
    (4 rows)
    ~~~

    When `id = 1` was updated to `id = 23` in `customers_4`, the referencing `customer_id` was set to `DEFAULT` (i.e., `9999`). You can see this in the first and last rows of `orders_4`, where `id = 100` and the `customer_id` is now `9999`

    Similarly, a deletion will set the referencing `customer_id` to the `DEFAULT` value. 

1. Delete `id = 2` from `customers_4`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM customers_4 WHERE id = 2;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM customers_4;
    ~~~
    ~~~
      id
    +------+
        3
        23
      9999
    (3 rows)
    ~~~

1. Check to make sure the corresponding `customer_id` value to `id = 101`, was updated to the `DEFAULT` value (i.e., `9999`) in `orders_4`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_4;
    ~~~

    ~~~
      id  | customer_id
    +-----+-------------+
      100 |        9999
      101 |        9999
      102 |           3
      103 |        9999
    (4 rows)
    ~~~

    If the default value for the `customer_id` column is not set, and the column does not have a [`NOT NULL`]({% link {{ page.version.version }}/not-null.md %}) constraint, `ON UPDATE SET DEFAULT` and `ON DELETE SET DEFAULT` actions set referenced column values to `NULL`.

1. Create a new `customers_5` table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers_5 (
        id INT PRIMARY KEY
      );
    ~~~

1. Insert some values:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers_5 VALUES (1), (2), (3), (4);
    ~~~

1. Create a new `orders_5` table that references the `customers_5` table, but with no default value specified for the `ON UPDATE SET DEFAULT` and `ON DELETE SET DEFAULT` actions:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE orders_5 (
        id INT PRIMARY KEY,
        customer_id INT REFERENCES customers_5(id) ON UPDATE SET DEFAULT ON DELETE SET DEFAULT
      );
    ~~~

1. Insert some values:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders_5 VALUES (200,1), (201,2), (202,3), (203,4);
    ~~~

1. Delete and update the values in the `customers_5` table to set the referenced values in `orders_5` to `NULL`:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM customers_5 WHERE id = 3;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > UPDATE customers_5 SET id = 0 WHERE id = 1;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SELECT * FROM orders_5;
    ~~~
    ~~~
      id  | customer_id
    +-----+-------------+
      200 |        NULL
      201 |           2
      202 |        NULL
      203 |           4
    (4 rows)
    ~~~

### Add multiple foreign key constraints to a single column

You can add more than one foreign key constraint to a single column.

1. Create the following tables:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE customers (
        id INT PRIMARY KEY,
        name STRING,
        email STRING
    );
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE orders (
        id INT PRIMARY KEY,
        customer_id INT UNIQUE,
        item_number INT
    );
    ~~~

1. Create a table with a column that references columns in both the `customers` and `orders` tables:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE shipments (
        tracking_number UUID DEFAULT gen_random_uuid() PRIMARY KEY,
        carrier STRING,
        status STRING,
        customer_id INT,
        CONSTRAINT fk_customers FOREIGN KEY (customer_id) REFERENCES customers(id),
        CONSTRAINT fk_orders FOREIGN KEY (customer_id) REFERENCES orders(customer_id)
      );
    ~~~

    Inserts into the `shipments` table must fulfill both foreign key constraints on `customer_id` (`fk_customers` and `fk_customers_2`).

1. Insert a record into each table:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO customers VALUES (1001, 'Alexa', 'a@co.tld'), (1234, 'Evan', 'info@cockroachlabs.com');
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO orders VALUES (1, 1001, 25), (2, 1234, 15), (3, 2000, 5);
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO shipments (carrier, status, customer_id) VALUES ('USPS', 'Out for delivery', 1001);
    ~~~

    The last statement succeeds because `1001` matches a unique `id` value in the `customers` table and a unique `customer_id` value in the `orders` table. If `1001` was in neither of the referenced columns, or in just one of them, the statement would return an error.

    For instance, the following statement fulfills just one of the foreign key constraints and returns an error:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT INTO shipments (carrier, status, customer_id) VALUES ('DHL', 'At facility', 2000);
    ~~~

    ~~~
    ERROR: insert on table "shipments" violates foreign key constraint "fk_customers"
    SQLSTATE: 23503
    DETAIL: Key (customer_id)=(2000) is not present in table "customers".
    ~~~

1. Add multiple foreign key constraints on the same column, that reference the same column:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > ALTER TABLE shipments ADD CONSTRAINT fk_customers_2 FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE;
    ~~~

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > SHOW CONSTRAINTS FROM shipments;
    ~~~

    ~~~
      table_name | constraint_name | constraint_type |                               details                                | validated
    -------------+-----------------+-----------------+----------------------------------------------------------------------+------------
      shipments  | fk_customers    | FOREIGN KEY     | FOREIGN KEY (customer_id) REFERENCES customers(id)                   |   true
      shipments  | fk_customers_2  | FOREIGN KEY     | FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE |   true
      shipments  | fk_orders       | FOREIGN KEY     | FOREIGN KEY (customer_id) REFERENCES orders(customer_id)             |   true
      shipments  | shipments_pkey  | PRIMARY KEY     | PRIMARY KEY (tracking_number ASC)                                    |   true
    (4 rows)
    ~~~

    There are now two foreign key constraints on `customer_id` that reference the `customers(id)` column (i.e., `fk_customers` and `fk_customers_2`).

1. In the event of a `DELETE` or `UPDATE` to the referenced column (`customers(id)`), the action for the first foreign key specified takes precedence. In this case, that will be the default [action](#foreign-key-actions) (`ON UPDATE NO ACTION ON DELETE NO ACTION`) on the first foreign key constraint (`fk_customers`). This means that `DELETE`s on referenced columns will fail, even though the second foreign key constraint (`fk_customer_2`) is defined with the `ON DELETE CASCADE` action.

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > DELETE FROM orders WHERE customer_id = 1001;
    ~~~

    ~~~
    ERROR: delete on table "orders" violates foreign key constraint "fk_orders" on table "shipments"
    SQLSTATE: 23503
    DETAIL: Key (customer_id)=(1001) is still referenced from table "shipments".
    ~~~

### Match composite foreign keys with `MATCH SIMPLE` and `MATCH FULL`

The examples in this section show how composite foreign key matching works for both the `MATCH SIMPLE` and `MATCH FULL` algorithms. For a conceptual overview, see [Composite foreign key matching](#composite-foreign-key-matching).

1. Create a `parent` tables with a composite key:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE parent (x INT, y INT,  z INT, UNIQUE (x, y, z));
    ~~~

1. Createa `full_test` table with a foreign key on `parent` that uses the `MATCH FULL` algorithm:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE full_test (
        x INT,
        y INT,
        z INT,
        FOREIGN KEY (x, y, z) REFERENCES parent (x, y, z) MATCH FULL ON DELETE CASCADE ON UPDATE CASCADE
      );
    ~~~

1. Create a `simple_test` table with a foreign key on `parent` that uses the `MATCH SIMPLE` algorithm (the default):

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > CREATE TABLE simple_test (
        x INT,
        y INT,
        z INT,
        FOREIGN KEY (x, y, z) REFERENCES parent (x, y, z) ON DELETE CASCADE ON UPDATE CASCADE
      );
    ~~~

1. Populate `parent` with some values:

    {% include_cached copy-clipboard.html %}
    ~~~ sql
    > INSERT
        INTO parent
      VALUES (1, 1, 1),
            (2, 1, 1),
            (1, 2, 1),
            (1, 1, 2),
            (NULL, NULL, NULL),
            (1, NULL, NULL),
            (NULL, 1, NULL),
            (NULL, NULL, 1),
            (1, 1, NULL),
            (1, NULL, 1),
            (NULL, 1, 1);
    ~~~

Now let's look at some `INSERT` statements to see how the different key matching algorithms work.

- [MATCH SIMPLE](#match-simple)
- [MATCH FULL](#match-full)

#### MATCH SIMPLE

Inserting values into the table using the `MATCH SIMPLE` algorithm (described [above](#composite-foreign-key-matching)) gives the following results:

| Statement                                         | Can insert? | Throws error? | Notes                         |
|---------------------------------------------------+-------------+---------------+-------------------------------|
| `INSERT INTO simple_test VALUES (1,1,1)`          | Yes         | No            | References `parent (1,1,1)`.  |
| `INSERT INTO simple_test VALUES (NULL,NULL,NULL)` | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (1,NULL,NULL)`    | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (NULL,1,NULL)`    | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (NULL,NULL,1)`    | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (1,1,NULL)`       | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (1,NULL,1)`       | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (NULL,1,1)`       | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (2,2,NULL)`       | Yes         | No            | Does not reference `parent`.  |
| `INSERT INTO simple_test VALUES (2,2,2)`          | No          | Yes           | No `parent` reference exists. |

#### MATCH FULL

Inserting values into the table using the `MATCH FULL` algorithm (described [above](#composite-foreign-key-matching)) gives the following results:

| Statement                                       | Can insert? | Throws error? | Notes                                               |
|-------------------------------------------------+-------------+---------------+-----------------------------------------------------|
| `INSERT INTO full_test VALUES (1,1,1)`          | Yes         | No            | References `parent(1,1,1)`.                         |
| `INSERT INTO full_test VALUES (NULL,NULL,NULL)` | Yes         | No            | Does not reference `parent`.                        |
| `INSERT INTO full_test VALUES (1,NULL,NULL)`    | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (NULL,1,NULL)`    | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (NULL,NULL,1)`    | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (1,1,NULL)`       | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (1,NULL,1)`       | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (NULL,1,1)`       | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (2,2,NULL)`       | No          | Yes           | Can't mix null and non-null values in `MATCH FULL`. |
| `INSERT INTO full_test VALUES (2,2,2)`          | No          | Yes           | No `parent` reference exists.                       |

## See also

- [Constraints]({% link {{ page.version.version }}/constraints.md %})
- [`DROP CONSTRAINT`]({% link {{ page.version.version }}/alter-table.md %}#drop-constraint)
- [`ADD CONSTRAINT`]({% link {{ page.version.version }}/alter-table.md %}#add-constraint)
- [`CHECK` constraint]({% link {{ page.version.version }}/check.md %})
- [`DEFAULT` constraint]({% link {{ page.version.version }}/default-value.md %})
- [`NOT NULL` constraint]({% link {{ page.version.version }}/not-null.md %})
- [`PRIMARY KEY` constraint]({% link {{ page.version.version }}/primary-key.md %})
- [`UNIQUE` constraint]({% link {{ page.version.version }}/unique.md %})
- [`SHOW CONSTRAINTS`]({% link {{ page.version.version }}/show-constraints.md %})
- [What is a Foreign Key? (With SQL Examples)](https://www.cockroachlabs.com/blog/what-is-a-foreign-key/)

<!-- REF DOC DRAFT: The following content was auto-generated. Please integrate into the sections above and remove this comment block. -->

## Subset-unique foreign key constraints

Starting in CockroachDB v26.3, foreign keys can be created when the referenced table has a unique constraint on a subset of the referenced columns, provided the `sql.subset_unique_fks.enabled` cluster setting is `true` (the default).

This enhancement allows greater flexibility in database design while maintaining referential integrity. The feature is safe because uniqueness on a set of columns mathematically implies uniqueness on any superset of those columns.

### Comparison with standard behavior

**Traditional behavior** (SQL standard):
- Foreign key references `(col1, col2)`
- Referenced table must have `UNIQUE(col1, col2)` or `PRIMARY KEY(col1, col2)`

**New subset behavior** (CockroachDB extension):
- Foreign key references `(col1, col2)`
- Referenced table can have `UNIQUE(col1)` - the constraint covers a subset
- CockroachDB automatically validates this is sufficient for referential integrity

### Example

{% include_cached copy-clipboard.html %}
~~~ sql
-- Create parent table with unique constraint on single column
CREATE TABLE departments (
  dept_id INT PRIMARY KEY,
  dept_name STRING UNIQUE,
  region STRING
);

-- Create child table referencing multiple columns including the unique one
CREATE TABLE employees (
  emp_id INT PRIMARY KEY,
  name STRING,
  dept_name STRING,
  region STRING,
  -- This works because dept_name is unique, making (dept_name, region) effectively unique
  FOREIGN KEY (dept_name, region) REFERENCES departments (dept_name, region)
);
~~~

### Configuration

To disable this CockroachDB extension and enforce strict SQL standard matching:

{% include_cached copy-clipboard.html %}
~~~ sql
SET CLUSTER SETTING sql.subset_unique_fks.enabled = false;
~~~

{{site.data.alerts.callout_info}}
When `sql.subset_unique_fks.enabled` is `false`, foreign key creation follows the strict SQL standard, requiring exact column matching between the foreign key references and unique constraints.
{{site.data.alerts.end}}

<!-- END REF DOC DRAFT -->
